# tartare-tools

./: .dockerignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md
apply-rules/: Cargo.toml  README.md
apply-rules/src/: main.rs
apply-rules/src/apply_rules/: complementary_code.rs  mod.rs  object_rule.rs  property_rule.rs  route_consolidation.rs
apply-rules/tests/: apply_rules.rs
apply-rules/tests/fixtures/: consolidate_on_itself.json  consolidate_regrouped_network.json  consolidate_twice_same_object.json  consolidation_on_new_object.json  property_rules.txt  routes_consolidation_line_after.txt  routes_consolidation_line_before.txt  routes_consolidation_lines.txt  routes_consolidation_network_line_unknown.txt  routes_consolidation_networks.txt
apply-rules/tests/fixtures/input/: comment_links.txt  comments.txt  object_codes.txt  object_properties.txt  physical_modes.txt  routes.txt
apply-rules/tests/fixtures/output/: routes.txt
apply-rules/tests/fixtures/output_apply_complementary_codes/: object_codes.txt  routes.txt
apply-rules/tests/fixtures/output_apply_property/: comment_links.txt  comments.txt  networks.txt  routes.txt  stops.txt
apply-rules/tests/fixtures/output_consolidation_with_object_code/: equipments.txt  networks.txt  routes.txt  stops.txt  trip_properties.txt  trips.txt
apply-rules/tests/fixtures/output_existing_network/: lines.txt
apply-rules/tests/fixtures/output_report/: report_apply_property.json  report_consolidation.json  report_consolidation_empty_no_grouped_from.json  report_consolidation_unknown_id.json  report_consolidation_with_object_code.json  report_global_consolidation_with_new_objects.json  report_route_consolidation_line_after.json  report_route_consolidation_line_before.json  report_route_consolidation_network_line_unknown.json
apply-rules/tests/fixtures/output_route_consolidation/: comment_links.txt  comments.txt  geometries.txt  object_codes.txt  object_properties.txt  routes.txt  trips.txt
enrich-with-hellogo-fares/: Cargo.toml  README.md
enrich-with-hellogo-fares/src/: main.rs
enrich-with-hellogo-fares/src/hellogo_fares/: mod.rs  read.rs  utils.rs
enrich-with-hellogo-fares/tests/: enrich_with_hellogo_fares.rs
filter-ntfs/: Cargo.toml  README.md
filter-ntfs/src/: filter.rs  main.rs
filter-ntfs/tests/: filter_ntfs.rs
filter-ntfs/tests/fixtures/output_extract/: routes.txt  stop_times.txt
filter-ntfs/tests/fixtures/output_extract_multiple_lines/: routes.txt  stop_times.txt
filter-ntfs/tests/fixtures/output_remove/: routes.txt  stop_times.txt
filter-ntfs/tests/fixtures/output_remove_line/: routes.txt  stop_times.txt
kv12ntfs/: Cargo.toml  README.md
kv12ntfs/doc/: kv1_to_ntfs_specs.md
kv12ntfs/src/: main.rs
kv12ntfs/src/kv1/: mod.rs  read.rs
kv12ntfs/tests/: kv12ntfs.rs
kv12ntfs/tests/fixtures/output/: lines.txt  stop_times.txt  stops.txt  transfers.txt
merge-ntfs/: Cargo.toml  README.md
merge-ntfs/src/: fuse.rs  main.rs  merge_collections.rs  unify.rs
merge-ntfs/tests/: merge_ntfs.rs
merge-ntfs/tests/fixtures/complete_subprefixed/input_ntfs1/: calendar.txt  comments.txt  companies.txt  datasets.txt  equipments.txt  geometries.txt  levels.txt  lines.txt  networks.txt  object_codes.txt  pathways.txt  routes.txt  stops.txt  transfers.txt  trip_properties.txt  trips.txt
merge-ntfs/tests/fixtures/complete_subprefixed/input_ntfs2/: calendar.txt  calendar_dates.txt  comment_links.txt  comments.txt  companies.txt  datasets.txt  equipments.txt  feed_infos.txt  frequencies.txt  geometries.txt  lines.txt  networks.txt  object_codes.txt  object_properties.txt  pathways.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trip_properties.txt  trips.txt
merge-ntfs/tests/fixtures/complete_subprefixed/output_ntfs/: calendar.txt  comment_links.txt  comments.txt  commercial_modes.txt  companies.txt  datasets.txt  equipments.txt  frequencies.txt  geometries.txt  levels.txt  lines.txt  networks.txt  object_codes.txt  object_properties.txt  pathways.txt  physical_modes.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trip_properties.txt  trips.txt
merge-ntfs/tests/fixtures/merge-ntfs/output/: report.json
merge-stop-areas/: Cargo.toml  README.md
merge-stop-areas/src/: main.rs  merge_stop_areas.rs
merge-stop-areas/tests/: merge_stop_areas.rs
merge-stop-areas/tests/fixtures/output/: routes.txt
navitia-poi-model/: Cargo.toml  README.md
navitia-poi-model/src/: io.rs  lib.rs  objects.rs
netexidf2ntfs/: Cargo.toml  README.md
netexidf2ntfs/src/: main.rs
netexidf2ntfs/src/netexidf/: accessibility.rs  attribute_with.rs  calendars.rs  common.rs  lines.rs  mod.rs  modes.rs  offers.rs  read.rs  stops.rs
netexidf2ntfs/tests/: netexidf2ntfs.rs
netexidf2ntfs/tests/fixtures/output/: routes.txt  stop_times.txt  transfers.txt
osm-utils/: Cargo.toml  README.md
osm-utils/src/: default_pois_config.json  lib.rs  objects.rs  poi.rs
piv2ntfs/: Cargo.toml
piv2ntfs/src/: main.rs
piv2ntfs/src/piv/: mod.rs  read.rs
piv2ntfs/tests/: piv2ntfs.rs
piv2ntfs/tests/fixtures/: config.json
piv2ntfs/tests/fixtures/output_ntfs/: calendar.txt  commercial_modes.txt  companies.txt  contributors.txt  datasets.txt  feed_infos.txt  lines.txt  networks.txt  object_codes.txt  physical_modes.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
transfers/: Cargo.toml  README.md
transfers/src/: lib.rs  main.rs  rules.rs
transfers/tests/: transfers.rs
transfers/tests/fixtures/: rules.txt
transfers/tests/fixtures/input/: transfers.txt
transfers/tests/fixtures/output/: report.json
transfers/tests/fixtures/output_all/: transfers.txt
transfers/tests/fixtures/output_all_with_rules/: transfers.txt
transfers/tests/fixtures/output_default/: transfers.txt
transfers/tests/fixtures/output_rules/: report.json  transfers.txt
transxchange2ntfs/: Cargo.toml  README.md
transxchange2ntfs/src/: main.rs
transxchange2ntfs/src/transxchange/: bank_holidays.rs  mod.rs  naptan.rs  operating_profile.rs  read.rs
transxchange2ntfs/tests/: transxchange2ntfs.rs
(+131 files in other folders)
