[package]
name = "tartare-tools"
version = "0.3.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
description = "Transit data management library and binaries"
license = "proprietary"
edition = "2018"
readme = "README.md"
repository = "https://github.com/CanalTP/tartare-tools.git"
keywords = ["data", "kv1", "netex", "ntfs", "osm", "poi", "transit", "transxchange"]
categories = ["data-structures", "encoding", "parser-implementations"]

[workspace]
members = [
  "apply-rules",
  "enrich-with-hellogo-fares",
  "filter-ntfs",
  "kv12ntfs",
  "merge-ntfs",
  "merge-stop-areas",
  "navitia-poi-model",
  "netexidf2ntfs",
  "osm-utils",
  "transfers",
  "transxchange2ntfs",
]

[dependencies]
chrono = "0.4"
csv = "1.0"
failure = "0.1"
geo = "0.12"
itertools = "0.8"
log = "0.4"
navitia-poi-model = { path = "./navitia-poi-model" }
osm-utils = { path = "./osm-utils" }
osm_transit_extractor = "0.2"
osmpbfreader = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
slog = "2.5"
slog-async = "2.3"
slog-envlogger = "2.1"
slog-scope = "4.1"
slog-stdlog = "4.0"
slog-term = "2.4"
structopt = "0.3"
transit_model = { version = "0.23", features = ["proj"] }
typed_index_collection = "1"
unidecode = "0.3"
zip = "0.5"
