[package]
authors = ["Kisio Digital <team.coretools@kisio.com>"]
categories = ["data-structures", "encoding", "parser-implementations"]
description = "Transit data management library and binaries"
edition = "2018"
keywords = ["data", "kv1", "netex", "ntfs", "osm", "poi", "transit", "transxchange"]
license = "proprietary"
name = "tartare-tools"
readme = "README.md"
repository = "https://github.com/CanalTP/tartare-tools.git"
version = "0.3.0"

[workspace]
members = [
  "apply-rules",
  "enrich-with-hellogo-fares",
  "filter-ntfs",
  "kv12ntfs",
  "merge-ntfs",
  "merge-stop-areas",
  "navitia-poi-model",
  "netexidf2ntfs",
  "osm-utils",
  "transfers",
  "transxchange2ntfs",
]

[dependencies]
chrono = "0.4"
csv = "1"
failure = "0.1"
geo = "0.14"
itertools = "0.9"
log = "0.4"
navitia-poi-model = {path = "./navitia-poi-model"}
osm-utils = {path = "./osm-utils"}
osm_transit_extractor = "0.4"
osmpbfreader = "0.13"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
slog = "2"
slog-async = "2"
slog-envlogger = "2"
slog-scope = "4"
slog-stdlog = "4"
slog-term = "2"
structopt = "0.3"
transit_model = { version = "0.28", features = ["proj"] }
typed_index_collection = "1"
unidecode = "0.3"
zip = "0.5"
