[package]
name = "apply-rules"
version = "0.1.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
csv = "1.0"
failure = "0.1"
geo-types = "0.4"
lazy_static = "1.2"
log = "0.4"
relational_types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tartare-tools = { version = "0.3", path = "../" }
transit_model = "0.18"
typed_index_collection = "1"
wkt = "0.5"

[dev-dependencies]
assert_cmd = "0.11"
pretty_assertions = "0.6"
tempfile = "3"
