[package]
name = "apply-rules"
version = "0.1.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
description = "Alter NTFS data"
license = "proprietary"
edition = "2018"
readme = "README.md"
repository = "https://github.com/CanalTP/tartare-tools.git"
keywords = ["data", "ntfs", "transit"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
chrono = "0.4"
csv = "1.0"
failure = "0.1"
geo-types = "0.6"
lazy_static = "1.2"
log = "0.4"
relational_types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tartare-tools = { version = "0.3", path = "../" }
transit_model = "0.29"
typed_index_collection = "1"
wkt = "0.8"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
pretty_assertions = "0.6"
tempfile = "3"
