[package]
name = "enrich-with-hellogo-fares"
version = "0.1.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
description = "Converts HelloGo Fares and merges it into NTFS"
license = "proprietary"
edition = "2018"
readme = "README.md"
repository = "https://github.com/CanalTP/tartare-tools.git"
keywords = ["data", "fares", "hellogo", "netex", "ntfs", "transit"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
chrono = "0.4"
failure = "0.1"
iso4217 = "0.3"
log = "0.4"
minidom = "0.12"
minidom_ext = "1"
rust_decimal = "1.0"
skip_error = { version = "1", features = ["log"] }
structopt = "0.3"
tartare-tools = { version = "0.3", path = "../" }
transit_model = "0.21"
zip = "0.5"

[dev-dependencies]
assert_cmd = "0.11"
pretty_assertions = "0.6"
rust_decimal_macros = "1.0"
tempfile = "3"
