[package]
name = "kv12ntfs"
version = "0.1.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
csv = "1.0"
failure = "0.1"
lazy_static = "1.2"
log = "0.4"
proj = "0.14"
serde = { version = "1", features = ["derive"] }
skip_error = { version = "1", features = ["log"] }
structopt = "0.3"
tartare-tools = { version = "0.3", path = "../" }
transit_model = "0.20"
typed_index_collection = "1"

[dev-dependencies]
assert_cmd = "0.11"
pretty_assertions = "0.6"
tempfile = "3"
