[package]
name = "merge-ntfs"
version = "0.1.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
failure = "0.1"
log = "0.4"
serde_json = "1"
structopt = "0.3"
tartare-tools = { version = "0.3", path = "../" }
transit_model = "0.20"
typed_index_collection = "1"

[dev-dependencies]
approx = "0.3"
assert_cmd = "0.11"
predicates = "1"
pretty_assertions = "0.6"
tempfile = "3"
