[package]
name = "merge-stop-areas"
version = "0.1.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
description = "Merge Stop Areas in NTFS data"
license = "proprietary"
edition = "2018"
readme = "README.md"
repository = "https://github.com/CanalTP/tartare-tools.git"
keywords = ["data", "ntfs", "transit"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
csv = "1.0"
chrono = "0.4"
failure = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skip_error = { version = "1", features = ["log"] }
structopt = "0.3"
tartare-tools = { version = "0.3", path = "../" }
transit_model = "0.29"
typed_index_collection = "1"

[dev-dependencies]
assert_cmd = "1"
pretty_assertions = "0.6"
tempfile = "3"
