[package]
name = "navitia-poi-model"
version = "0.1.0"
authors = ["David Quintanel <david.quintanel@gmail.com>", "Nicolas Bérard <nicolas.berard@kisio.org>"]
license = "AGPL-3.0"
description = "Navitia's POIs (Point of Interest) model"
repository="https://github.com/CanalTP/tartare-tools"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
geo = "0.12"
csv = "1.0"
failure = "0.1"
itertools = "0.8"
zip = "0.5"
