[package]
name = "navitia-poi-model"
version = "0.2.2"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
license = "AGPL-3.0"
description = "Navitia's POIs (Point of Interest) model"
repository = "https://github.com/CanalTP/tartare-tools"
edition = "2018"

[dependencies]
csv = "1.0"
failure = "0.1"
geo = "0.12"
itertools = "0.8"
serde = { version = "1.0", features = ["derive"] }
zip = "0.5"
