[package]
name = "navitia-poi-model"
version = "0.2.2"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
description = "Navitia's POIs (Point of Interest) model"
license = "proprietary"
edition = "2018"
readme = "README.md"
repository = "https://github.com/CanalTP/tartare-tools.git"
keywords = ["data", "osm", "transit"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
csv = "1.0"
failure = "0.1"
geo = "0.12"
itertools = "0.8"
serde = { version = "1.0", features = ["derive"] }
zip = "0.5"
