[package]
name = "netexidf2ntfs"
version = "0.1.0"
authors = ["Kisio Digital <team.coretools@kisio.org>"]
description = "Converts NeTEx IDFM into NTFS"
license = "proprietary"
edition = "2018"
readme = "README.md"
repository = "https://github.com/CanalTP/tartare-tools.git"
keywords = ["data", "idfm", "netex", "ntfs", "transit"]
categories = ["data-structures", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
derivative = "1"
failure = "0.1"
lazy_static = "1.2"
log = "0.4"
minidom = "0.12"
minidom_ext = "1"
pretty_assertions = "0.6"
proj = "0.14"
serde = { version = "1", features = ["derive"] }
skip_error = { version = "1", features = ["log"] }
structopt = "0.3"
tartare-tools = { version = "0.3", path = "../" }
transit_model = "0.24"
typed_index_collection = "1"
walkdir = "2.1"

[dev-dependencies]
assert_cmd = "0.11"
pretty_assertions = "0.6"
tempfile = "3"
