[package]
name = "osm-utils"
version = "0.2.0"
authors = ["David Quintanel <david.quintanel@gmail.com>"]
edition = "2018"

[dependencies]
osm_boundaries_utils = "0.2"
osmpbfreader = "0.11"
geo = "0.6"
serde = "1.0.82"
serde_json = "1.0.33"
log = "0.4.6"
serde_derive = "1.0.82"
failure = "0.1.3"
navitia-poi-model = { path = "../navitia-poi-model" }
