[package]
name = "osm-utils"
version = "0.2.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
edition = "2018"

[dependencies]
failure = "0.1.3"
geo = "0.6"
log = "0.4.6"
navitia-poi-model = { path = "../navitia-poi-model" }
osm_boundaries_utils = "0.2"
osmpbfreader = "0.11"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
