[package]
name = "piv2ntfs"
version = "0.1.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
description = "Converts PIV into NTFS"
license = "proprietary"
edition = "2018"
readme = "README.md"
repository = "https://github.com/CanalTP/tartare-tools.git"
keywords = ["data", "piv", "ntfs", "transit"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
chrono = "0.4"
csv = "1.0"
failure = "0.1"
lazy_static = "1.2"
log = "0.4"
proj = "0.19"
relational_types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skip_error = { version = "1", features = ["log"] }
structopt = "0.3"
tartare-tools = { version = "0.3", path = "../" }
transit_model = "0.31"
typed_index_collection = "1"
walkdir = "2.1"

[dev-dependencies]
assert_cmd = "1"
pretty_assertions = "0.6"
tempfile = "3"
