[package]
name = "transfers"
version = "0.1.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
csv = "1.1.3"
failure = "0.1"
log = "0.4"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0.55"
structopt = "0.3"
tartare-tools = { version = "0.3", path = "../" }
transit_model = "0.20"
typed_index_collection = "1.0"

[dev-dependencies]
assert_cmd = "1.0.1"
pretty_assertions = "0.6.1"
tempfile = "3.1.0"
