[package]
name = "transfers"
version = "0.2.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
description = "Add transfers to NTFS data"
license = "proprietary"
edition = "2018"
readme = "README.md"
repository = "https://github.com/CanalTP/tartare-tools.git"
keywords = ["data", "ntfs", "transfer", "transit"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
chrono = "0.4"
csv = "1.1.3"
derivative = "2"
failure = "0.1"
log = "0.4"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0.55"
structopt = "0.3"
tartare-tools = { version = "0.3", path = "../" }
transit_model = "0.31"
typed_index_collection = "1.0"

[dev-dependencies]
assert_cmd = "1.0.1"
pretty_assertions = "0.6.1"
tempfile = "3.1.0"
